# TicketingTask_AbanoubRamsis

./: .clang-format  CMakeLists.txt  Dockerfile  enviroment_requirements.bash
include/BackOffice/: CBackOfficeServer.hpp  CRequestHandler.hpp  CUniqueNumberGenerator.hpp  IRequestHandler.hpp  UniqueNumberGenerator.hpp
include/BackOffice/Database/: CDatabaseFactory.hpp  CJsonFileDatabaseHandler.hpp  CReportDatabase.hpp  CTicketStockDatabase.hpp  IDatabaseHandler.hpp  IReportDatabase.hpp  ITicketStockDatabase.hpp
include/CommonTypes/: CDateTime.hpp  CTicketData.hpp  CTicketRequest.hpp
include/GateSimulator/: CTransactionReporter.hpp  CValidationRequestHandler.hpp
include/InterprocessCommunication/: CHttpServer.hpp  HttpTargets.hpp
include/LibCommon/BackOfficeInterface/: CBackOfficeClientFactory.hpp  CBackOfficeHttpClient.hpp  CBackOfficeProxy.hpp  IBackOfficeClient.hpp
include/LibCommon/InterprocessCommunication/: CHttpClient.hpp  CHttpServer.hpp  HttpTargets.hpp  IHttpServer.hpp
include/LibCommon/MqttClient/: MqttTopics.hpp
include/Mqtt/: MqttClient.hpp  MqttTopics.hpp
include/TicketVendingMachine/: CBackOfficeProxy.hpp  CSaleRequestHandler.hpp  SaleRequestHandler.hpp
src/: CMakeLists.txt
src/BackOffice/: CBackOfficeServer.cpp  CMakeLists.txt  CRequestHandler.cpp  main.cpp
src/CommonTypes/: CMakeLists.txt  CTicketData.cpp  CTicketRequest.cpp
src/GateSimulator/: CMakeLists.txt  CTransactionReporter.cpp  CValidationRequestHandler.cpp  main.cpp
src/InterprocessCommunication/: CHttpClient.cpp  CHttpServer.cpp  CMakeLists.txt
src/LibCommon/: CMakeLists.txt
src/Mqtt/: CMakeLists.txt  MqttClient.cpp
src/TicketVendingMachine/: CBackendProxy.cpp  CMakeLists.txt  CSaleRequestHandler.cpp  SaleRequestHandler.cpp  main.cpp
tests/src/: CMakeLists.txt
tests/src/Backoffice/: main.cpp  (+2 more)
(+28 files in other folders)
